--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "my-app",
   "version": "1.0.0",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
