--- a/package.json
+++ b/package.json
@@ -1,14 +1,8 @@
 {
-  "name": "my-app",
+  "name": "todo-app",
   "version": "1.0.0",
-  "engines": {
-    "node": "14.x"
-  },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
   },
   "dependencies": {
     "react": "^17.0.2",
